<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/add_tipo_title"
        android:text="@string/anadir_tipo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombreTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/add_tipo_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancelar"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="0.5dp"
            android:layout_weight="1"
            android:text="@string/add_tipo_cancelar"
            android:textColor="@color/add_tipo_bt" />

        <Button
            android:id="@+id/btAceptar"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="@string/add_tipo_aceptar"
            android:textColor="@color/add_tipo_bt" />
    </LinearLayout>


</LinearLayout>